--- a/blog/style.css
+++ b/blog/style.css
@@ -1,7 +1,13 @@
 /* First CSS handwritten by Alejandro Morales */
+@font-face {
+	font-family: 'LeagueGothic';
+	src: url('type/LeagueGothic-Regular.otf');
+
+}
+
 
 body {background-color: #282828;}
-#menu {background-color: #ffffff;}
+#menu {background-color: #ffffff; text-transform: capitalize;}
 #articles {background-color: #ffffff;}
 
 hr {
@@ -11,15 +17,17 @@ hr {
 
 header {
 	background-color: #ffffff; 
-	font-family: futura; 
-	font-size: 40px
+	font-family: LeagueGothic;
+	text-transform: uppercase; 
+	font-size: 48pt
 }
 
 a { 
 	color:#000000; 
 	text-decoration:none;
+	text-transform: lowercase;
 	font-family:futura; 
-	font-size: 12px; 
+	font-size: 10pt; 
 	font-weight:bold; 
 }
 
@@ -29,25 +37,26 @@ a:hover {
 
 h1 {
 	text-decoration:none;
-	font-family:futura; 
-	font-size: 18px;
+	font-family:LeagueGothic; 
+	text-transform: uppercase;
+	font-size: 24pt;
 	font-weight:bold;
 }
 
 h3 {
 	text-decoration:none;
 	font-family:futura; 
-	font-size: 14px;
+	font-size: 12pt;
 	font-weight:bold;
 }
 p {
 	text-decoration:none;
 	font-family:futura; 
-	font-size: 12px;
+	font-size: 10pt;
 	font-weight:normal;
 }
 footer {
 	background-color: #ffffff; 
 	font-family: futura; 
-	font-size: 10px;
+	font-size: 10pt;
 }
