--- a/mystyle.css
+++ b/mystyle.css
@@ -1,2 +1,69 @@
-font-family: 'Codystar', cursive;
-font-family: 'Monoton', cursive;
+/*css by Alejandro Morales*/
+/*font-family: 'Codystar', cursive;
+font-family: 'Monoton', cursive;*/
+
+body {
+	border: 1px solid #404040;
+	border-radius: 4px;
+	width: 90%;
+	margin: auto;
+	padding: 4px;
+	background: #282828;
+	font-size: 14pt;
+	font-family: Codystar, cursive;
+	color: white;
+}
+
+/*header */
+
+header h1{
+	margin: auto;
+	text-align: center;
+	font-family: Monoton, cursive;
+	line-height: 0.9em;
+	font-size: 3rem;
+	color: green;
+	background-color: #303030;
+	width: 360px;
+	border: 1px solid #404040;
+	border-radius: 4px;
+}
+
+h2 {
+	margin: auto;
+	background-color: #202020;
+	font-size: 1rem;
+	border-bottom: 1px solid #404040;
+	border-top: 1px solid #404040;
+	padding: 2px 4px 2px 4px;
+	/*font-weight: bold;*/
+}
+
+img {
+	padding: 4px;
+	border: 1px solid #404040;
+	border-radius: 4px;
+
+}
+
+/*articles*/
+
+article {
+	margin: auto;
+	padding:2px 4px 2px 4px;
+	background-color: #303030;
+	border: 1px solid #404040;
+	border-radius: 4px;
+}
+
+/* Footer */
+footer p {
+	margin: 0;
+	padding: 5px;
+}
+footer {
+	background-color: #505050;
+	border: 1px solid #404040;
+	border-radius: 4px;
+	color: black;
+}
