--- a/blog/style.css
+++ b/blog/style.css
@@ -1,5 +1,5 @@
 /* First CSS handwritten by Alejandro Morales */
-
+/*This one belongs to super blog*/
 /* Font imported into the html and called from here to format the titles */
 @font-face {
 	font-family: 'LeagueGothic';
