--- a/coffee/style.css
+++ b/coffee/style.css
@@ -1,4 +1,5 @@
-/* First CSS handwritten by Alejandro Morales */
+/* First CSS handwritten by Alejandro Morales. It styles the caffee site */
+
 
 body {background-color: #230b03;}
 #articles {background-color: #ffffff;}
