--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,16 @@
+/*This belongs to my personal website*/
 /*css by Alejandro Morales*/
 /*font-family: 'Codystar', cursive;
 font-family: 'Monoton', cursive;*/
+*{
+	box-sizing: border-box;
+	box-sizing: content-box;
+}
+
+ul {
+
+	list-style-type: none;
+}
 
 body {
 	border: 1px solid #404040;
@@ -10,7 +20,7 @@ body {
 	padding: 4px;
 	background: #282828;
 	font-size: 14pt;
-	font-family: Codystar, cursive;
+	font-family: Codystar, cursive, sans-serif;
 	color: white;
 }
 
@@ -19,7 +29,7 @@ body {
 header h1{
 	margin: 0.3% auto;
 	text-align: center;
-	font-family: Monoton, cursive;
+	font-family: Codystar, cursive, sans-serif;
 	line-height: 0.9em;
 	font-size: 3rem;
 	color: green;
@@ -47,9 +57,10 @@ header h2 {
 img {
 	display: block;
 	margin: auto;
+	max-width: 150px;
 	padding: 4px;
 	border: 1px solid #404040;
-	border-radius: 4px;
+	border-radius: 50%;
 
 }
 
@@ -59,13 +70,14 @@ width: auto;
 }
 
 
-article {
+articles {
+	display: inline-block;
 	width: 32%;
 	/*min-width: 312px;*/
-	max-height: 250px;
 	min-height: 70px;
 	margin: 0.2% 0.2%;
 	float: left;
+	overflow: hidden;
 	padding:2px 4px 2px 4px;
 	background-color: #303030;
 	border: 1px solid #404040;
@@ -73,10 +85,7 @@ article {
 	font-size: 0.9rem;
 }
 
-ul {
 
-	list-style-type: none;
-}
 
 .clear {
 	clear: both;
